# rcal

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: build_nix.yml
src/: cache.rs  main.rs
src/database/: mod.rs  prelude.rs
src/model/: appointment.rs  mod.rs
