[package]
name = "rcal"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
color-eyre = "0.6.3"
console-subscriber = "0.4.1"
lazy_static = "1.5.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio = { version = "1.41.1", features = ["full", "tracing"] }
tokio-utils = "0.1.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
